--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,8 @@
 
 /* CSS */
 .active {
-    color: #282f66;
-    background-color: rgb(250, 254, 255);
-    border-bottom: 2px solid #282f66;
+    color: #646CFF;
+    background-color: rgb(240, 243, 255);
+    border-left: 2px solid #646CFF;
+    border-right: 2px solid #646CFF;
 }
