--- a/src/Pages/Home/Banner/styles.css
+++ b/src/Pages/Home/Banner/styles.css
@@ -32,7 +32,10 @@ body {
   height: 300px;
 }
 
-.swiper-slide img {
+.swiper-img-custom {
   display: block;
   width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
+
